gcc/testsuite/gdc.test/compilable/imports/test9399a.d
module imports.test9399a;

void call(alias n)() {
    n();
}
