gcc/testsuite/gdc.test/fail_compilation/imports/fail1900a.d
module imports.fail1900a;
template Bar(int n) { enum Bar = n; }
